--- a/pets.html
+++ b/pets.html
@@ -6,8 +6,20 @@
     <title>Pets</title>
 </head>
 <body>
-    <a href = "">Skip to Main Content</a>
-    <main>
+    <a href = "#main">Skip to Main Content</a>
+    <header>
+        <nav>
+            <ul>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href="pets.html">Pets</a></li>
+                <li><a href="recipes.html">Recipes</a></li>
+                <li><a href="travel.html">Travel</a></li>
+            </ul>
+        </nav>
+        <h1>Week Two discussion</h1>
+
+    </header>
+    <main id="main">
         <h1>Pets</h1>
         <div>
             <h2>Bacon Q Dog</h2>
@@ -30,8 +42,6 @@
                 <li>Playing tug-of-war</li>
                 <li>Sneaking onto the couch</li>
             </ul>
-            <!-- Jackie Wolf -->
-        
         </div>
         <div></div>
         <div></div>
