--- a/pets.html
+++ b/pets.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Pets</title>
 </head>
 <body>
@@ -16,9 +18,9 @@
                 <li><a href="travel.html">Travel</a></li>
             </ul>
         </nav>
-        <h1>Week Two discussion</h1>
-
+        <h1>Lawrence's CCP</h1>
     </header>
+    
     <main id="main">
         <h1>Pets</h1>
         <div>
