--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
     <title>Home</title>
 </head>
 <body>
@@ -30,7 +28,7 @@
         <div>
             <h2>Contents</h2>
             <h3>Pets</h3>
-            <p>The pet page includes: Bacon Q Dog</p>
+            <p>The pet page includes: Bacon Q Dog, Peddie, Maple</p>
         
             <h3>Recipes</h3>
             <p>The Recipes page includes: BLAT sandwich, Guacamole</p>
