--- a/pets.html
+++ b/pets.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
     <title>Pets</title>
 </head>
 <body>
@@ -29,6 +27,7 @@
 
             <p>Bacon Q. Dog is a 9yr old labradoodle. He prefers to spend his days lounging among the three different beds/couches that his family has gifted him. He enjoys a walk or two around the neighborhood, as long as he can pretend that he doesn't see any of the other animals to avoid the embarrassment of not wanting to admit he has no wolf-like skills in chasing them.</p> 
             <P>At night just as the rest of the family is ready to relax, Bacon suddenly wants to release all of his energy. He will place his toys on a mini couch and frantically drag the couch around, giving his toys "a ride." There is also a lot of rolling. Lots and lots of rolling.</P>
+
             <h3>Photo Gallery</h3>
             <img src="images/bacon_bandana.JPG" width ="200" alt = "Brown labradoodle wearing an orange bandana">
             <img src="images/bacon_graduation.JPG"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
@@ -45,10 +44,48 @@
                 <li>Sneaking onto the couch</li>
             </ul>
         </div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+
+        <div>
+            <h2>Peddie</h2>
+            <img src="images/peddie.jpg" width="400" alt="A cute naughty golden retriever.">
+
+            <p>Peddie, the Golden Retriever, is a charming and lively companion known for his beautiful coat and playful nature. He's a perfect partner for outdoor fun, loved for his loyalty and gentle disposition.</p>
+            <p>Peddie's intelligence and friendly demeanor make him a beloved member of his family and a source of joy for everyone who knows him.</p>
+
+            <h3>Photo Gallery</h3>
+            <img src="images/peddie_play.jpg" width="200" alt="Peddie is playing in the snow.">
+            <img src="images/peddie_swim.jpg" width="200" alt="Peddie is swimming in a lake.">
+            <img src="images/peddie_sleep.jpg" width="200" alt="Peddie loves sleeping on the couch.">
+            <img src="images/peddie_smile.jpg" width="200" alt="Peddie is the sweetest in the world.">
+
+            <h3>Likes</h3>
+            <ul>
+                <li>Swimming</li>
+                <li>Running in the park</li>
+                <li>Meeting new friends</li>
+            </ul>
+        </div>
+
+        <div>
+            <h2>Maple</h2>
+            <img src="images/maple_santa.JPG" width="400" alt="Brown striped tabby wearing a santa hat.">
+
+            <p>Maple is a 2 year old tabby cat with brown stripes. She is very playful and friendly but also loves lounging in the sun! Maple is a huge fan of treats - she has even learned how to open doors to steal some extra treats.</p>
+            <p>Sometimes Maple has boundless energy. At night, she gets the zoomies after eating her final meal of the day. It usually takes her another hour to settle down before she can take a long nap.</p>
+
+            <h3>Photo Gallery</h3>
+            <img src="images/maple_christmas.JPG" width="200" alt="Maple with Christmas tree">
+            <img src="images/maple_playing.JPG" width="200" alt="Playing with Maple">
+            <img src="images/maple_sun.JPG" width="200" alt="Maple laying under the sun">
+            <img src="images/maple_selfie.JPG" width="200" alt="Selfie of Maple">
+
+            <h3>Likes</h3>
+            <ul>
+                <li>Belly rubs</li>
+                <li>Treats</li>
+                <li>Stretching her paws</li>
+            </ul>
+        </div>
     </main>
     
 </body>
