--- a/recipes.html
+++ b/recipes.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
     <title>Recipes</title>
 </head>
 <body>
@@ -84,6 +82,40 @@
             <img src="images/avocado_chips.jpg" width ="200" alt = "Chips and guacamole">
             <img src="images/taco.jpg" width="200" alt="Guacamole in a taco">
             <img src="images/guacamole_2.jpg" width="200" alt="Guacamole in a bowl">
+        </div>
+
+        <div>
+            <h2>Zucchini Fritters</h2>
+            <p>Origin: Unknown</p>
+            <p>Source: niftyrecipe.com</p>
+            <p>Category: Side dish/main dish</p>
+            <img src="images/Zucchini_fritters_1.jpeg" width="400" alt="Photo of Zucchini Fritters">
+            <p>I found this recipe for zucchini fritters on a food blog when I was looking for quick and easy dishes to make during undergrad. It uses minimal ingredients and can be done in less than half an hour. They’re delicious and filling and go great with dipping sauces.</p>
+
+            <h3>Recipe Ingredients</h3>
+            <ul>
+                <li>Zucchini</li>
+                <li>Egg</li>
+                <li>Flour</li>
+                <li>Vegetable/seed oil</li>
+                <li>Garlic</li>
+                <li>Salt and pepper</li>
+            </ul>
+
+            <h3>Recipe Steps</h3>
+            <ol>
+                <li>Combine eggs, salt, and pepper and whisk</li>
+                <li>Add pressed garlic</li>
+                <li>Grate the zucchini and squeeze the moisture out of it</li>
+                <li>Add zucchini and flour and mix</li>
+                <li>Heat oil in pan and add dollops of batter</li>
+                <li>Serve with or without dipping sauce</li>
+            </ol>
+
+            <h3>Additional Food images</h3>
+            <img src="images/Zucchini_fritters_2.jpeg" width ="200" alt = "Grated zucchini.">
+            <img src="images/Zucchini_fritters_4.jpg" width ="200" alt = "Ingredients for zucchini fritters combined.">
+            <img src="images/Zucchini_fritters_3.jpeg" width ="200" alt = "Zucchini fritters in the pan cooking.">
         </div>
     </main>
 </body>
