--- a/travel.html
+++ b/travel.html
@@ -30,12 +30,18 @@
             <p>Beyond the surface, New York City's subway system and iconic yellow taxis make it remarkably accessible, allowing residents and visitors alike to explore its diverse offerings. This city is a stage for dreams to be pursued, a canvas for artistry to flourish, and a relentless engine of progress. It's a place where the past meets the future, and where every corner seems to tell a unique story, making New York City an irresistible destination for those seeking inspiration and adventure.</p>
 
             <h3>Photo Gallery</h3>
-            <img src="images/brooklyn_bridge.jpg" width="400" alt="brooklyn bridge">
-            <p>The Brooklyn Bridge is an iconic suspension bridge spanning the East River, connecting Manhattan and Brooklyn, known for its majestic architecture and historical significance.</p>
-            <img src="images/flatiron.jpg" width="400" alt="flatiron">
-            <p>The Flatiron Building, with its distinctive triangular shape and Beaux-Arts architecture, is a historic landmark nestled in the heart of Manhattan, epitomizing New York City's architectural charm.</p>
-            <img src="images/central_park.jpg" width="400" alt="Photo of central park">
-            <p>Central Park is a sprawling urban oasis in the heart of Manhattan, offering a serene escape from the city's hustle and bustle with its lush greenery, scenic waterways, and diverse recreational opportunities.</p>
+            <figure>
+                <img src="images/brooklyn_bridge.jpg" width="400" alt="Photo of brooklyn bridge taken in between buildings">
+                <figcaption>The Brooklyn Bridge</figcaption>
+            </figure>
+            <figure>
+                <img src="images/flatiron.jpg" width="400" alt="Photo of flatiron with traffic">
+                <figcaption>The Flatiron Building</figcaption>
+            </figure>
+            <figure>
+                <img src="images/central_park.jpg" width="400" alt="Photo of central park with people on the grass">
+                <figcaption>Central Park</figcaption>
+            </figure>
         </div>
 
         <div>
@@ -47,15 +53,42 @@
             <p>Boston's neighborhoods offer a diverse range of experiences, from the cobblestone streets of Beacon Hill to the trendy shops and restaurants of the South End. The city's green spaces, such as the Boston Common and the Emerald Necklace parks, provide a peaceful escape from the urban hustle, while the bustling waterfront and delicious seafood cuisine showcase its maritime roots. Boston's unique blend of history, culture, and local charm makes it a captivating destination for visitors and a beloved home for its residents.</p>
 
             <h3>Photo Gallery</h3>
-            <img src="images/harvard.jpg" width="400" alt="Photo of Harvard">
-            <p>Harvard University is an iconic Ivy League institution in Cambridge, Massachusetts, renowned for its academic excellence and historic prestige.</p>
-            <img src="images/charles_river.jpg" width="400" alt=" Photo of charles river">
-            <p>The Charles River is a picturesque waterway winding through the Boston metropolitan area, offering scenic views and recreational opportunities for residents and visitors alike.</p>
-            <img src="images/boston_common.jpg" width="400" alt="Photo of Boston common">
-            <p>Boston Common is a historic and beloved urban park located in the heart of Boston, serving as a tranquil oasis amid the city's hustle and a gathering place for both residents and tourists.</p>
+            <figure>
+                <img src="images/harvard.jpg" width="400" alt="Photo of buiding in harvard with green trees and grass">
+                <figcaption>Harvard University</figcaption>
+            </figure>
+            <figure>
+                <img src="images/charles_river.jpg" width="400" alt=" Photo of charles river during nighttime">
+                <figcaption>The Charles River</figcaption>
+            </figure>
+            <figure>
+                <img src="images/boston_common.jpg" width="400" alt="Photo of Boston common during daytime">
+                <figcaption>The Boston Common</figcaption>
+            </figure>
         </div>
-        <div></div>
-        <div></div>
+
+        <div>
+            <h2>Seattle</h2>
+            <img src="images/seattle.gif" width="400" alt="Seattle git">
+            <img src="images/seattle_main.jpg" width="400" alt="Photo of Seattle">
+            <p>Geographical Location: North America</p>
+            <p>Seattle, nestled in the Pacific Northwest, harmoniously blends city living with nature's beauty. The iconic Space Needle stands tall, offering sweeping views of mountains and water. Seattle's cultural scene thrives with museums, theaters, and a rich music history, while its commitment to sustainability and outdoor activities makes it a haven for nature lovers.</p>
+            <p>Seattle, birthplace of Starbucks, is a coffee lover's paradise. Distinct neighborhoods like Pioneer Square and Capitol Hill offer diverse experiences, and Pike Place Market bustles with fresh seafood and artisanal goods. Seattle's fusion of innovation, natural allure, and cultural richness makes it a compelling and inviting city.</p>
+
+            <h3>Photo Gallery</h3>
+            <figure>
+                <img src="images/space_needle.jpg" width="400" alt="Photo of space needle from the ground">
+                <figcaption>The Space Needle</figcaption>
+            </figure>
+            <figure>
+                <img src="images/pike_place.jpg" width="400" alt="Photo of pike place market during nighttime">
+                <figcaption>Pike Place Market</figcaption>
+            </figure>
+            <figure>
+                <img src="images/mount_rainer.jpg" width="400" alt="Photo of Mount Rainer from distance">
+                <figcaption>Mount Rainier</figcaption>
+            </figure>
+        </div>
     </main>
     
 </body>
