--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>The Recipes page includes: BLAT sandwich, Guacamole</p>
 
             <h3>Travel</h3>
-            <p>The travel page includes: New York City, Boston</p>
+            <p>The travel page includes: New York City, Boston, Seattle</p>
         </div>
     </main>
     
