--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div>
             <h2>Contents</h2>
             <h3>Pets</h3>
-            <p>The pet page includes: Bacon Q Dog, Peddie, Maple</p>
+            <p>The pet page includes: Bacon Q Dog, Peddie, Maple, Rocket, Sage</p>
         
             <h3>Recipes</h3>
             <p>The Recipes page includes: BLAT sandwich, Guacamole</p>
